--- a/src/components/AdLevel/AdLevel.scss
+++ b/src/components/AdLevel/AdLevel.scss
@@ -1,10 +1,11 @@
 .ad-level {
   text-align: center;
   padding: 0;
-  height: 290px;
+  height: 310px;
   width: 100%;
   position: relative;
   margin: 0 5px;
+  border: 1px solid;
 
   .header {
     position: relative;
